--- a/pages/extras.html
+++ b/pages/extras.html
@@ -63,7 +63,7 @@
         </div>
         <div class="card">
             <h5 class="card-title-extras">It's an S Club Thing</h5>
-            <img src="../images/s-club-thing.JPG" class="card-img-top" alt="...">
+            <img src="../images/s-club-thing.jpg" class="card-img-top" alt="...">
             <div class="card-body">
             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, minus impedit itaque rem cupiditate recusandae unde fuga, accusantium repellendus illum quaerat! Ab dignissimos quisquam accusantium corrupti id dolorum tempora rerum?</p>
             <a href="../pages/its-an-s-club-thing.html" class="btn btn-primary">Go</a>
