--- a/pages/extras.html
+++ b/pages/extras.html
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Animaciones-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- CSS BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mi CSS-->
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
@@ -52,23 +57,25 @@
         
     </section>
 
-    <div class="card-group">
-        <div class="card">
-            <h5 class="card-title-extras">On This Day</h5>
-            <img src="../images/on-this-day.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, deleniti odio sed, harum cupiditate sunt dicta, in dolores alias ipsum exercitationem? Velit quis assumenda expedita blanditiis illo officiis inventore laborum?</p>
-            <a href="../pages/onthisday.html" class="btn btn-primary">Go</a>
+    <section class="extrasCard">
+        <div class="card-group">
+            <div class="card">
+                <h5 class="card-title-extras">On This Day</h5>
+                <img src="../images/on-this-day.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, deleniti odio sed, harum cupiditate sunt dicta, in dolores alias ipsum exercitationem? Velit quis assumenda expedita blanditiis illo officiis inventore laborum?</p>
+                <a href="../pages/onthisday.html" class="btn btn-primary">Go</a>
+                </div>
+            </div>
+            <div class="card">
+                <h5 class="card-title-extras">It's an S Club Thing</h5>
+                <img src="../images/s-club-thing.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, minus impedit itaque rem cupiditate recusandae unde fuga, accusantium repellendus illum quaerat! Ab dignissimos quisquam accusantium corrupti id dolorum tempora rerum?</p>
+                <a href="../pages/its-an-s-club-thing.html" class="btn btn-primary">Go</a>
             </div>
         </div>
-        <div class="card">
-            <h5 class="card-title-extras">It's an S Club Thing</h5>
-            <img src="../images/s-club-thing.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, minus impedit itaque rem cupiditate recusandae unde fuga, accusantium repellendus illum quaerat! Ab dignissimos quisquam accusantium corrupti id dolorum tempora rerum?</p>
-            <a href="../pages/its-an-s-club-thing.html" class="btn btn-primary">Go</a>
-            </div>
-    </div>
+    </section>
 
     <section id=interviews class="block">
         <p class="textoExtras"> ExcluSive Interviews </p>
