--- a/pages/tv-series.html
+++ b/pages/tv-series.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- CSS BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mi CSS-->
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
@@ -24,14 +27,14 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">S Club 7</a>
+              <a class="navbar-brand" href="../index.html">S Club 7</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/tv-series.html">TV-Series</a>
@@ -51,37 +54,46 @@
 
     <section id="tv-series" class="block">
         <h2 class="colorblack"> S Club 7 TV Series </h2>
-            <article>
             <!-- TABLAS -->
 
-            <table border="1" cellpadding="5" cellspacing="5">
-                <tr>
-                    <th> <strong>Season</strong> </th>
-                    <th><strong>Episodes</strong> </th>
-                    <th><strong>Original airdate</strong> </th>
-                </tr>
-                <tr>
-                    <td>Miami 7 <i>a.k.a S Club 7 in Miami</i> </td>
-                    <td>13 episodes + 2 TV Specials</td>
-                    <td>8th April 1999</td>
-                </tr>
-                <tr>
-                    <td>L.A. 7 <i>a.k.a S Club 7 in L.A.</i></td>
-                    <td>13 episodes + 2 TV Specials</td>
-                    <td>6th April 2000</td>
-                </tr>
-                <tr>
-                    <td>Hollywood 7 <i>a.k.a S Club 7 in Hollywood</i></td>
-                    <td>13 episodes</td>
-                    <td>27th September 2001</td>
-                </tr>
-                <tr>
-                    <td>Viva S Club</td>
-                    <td>13 episodes</td>
-                    <td>20th September 2002</td>
-                </tr>
-            </table>
-            </article>
+            <div class="table-responsive">
+                <table class="table table-hover" border="1" cellpadding="5" cellspacing="5">
+                  <thead>
+                        <tr>
+                            <th>Season</th>
+                            <th>Episodes</th>
+                            <th>Location</th>
+                            <th>Original airdate</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Miami 7 a.k.a S Club 7 in Miami</td>
+                            <td>13 episodes + 2 TV Specials</td>
+                            <td>Florida</td>
+                            <td>8th April 1999</td>
+                        </tr>
+                        <tr>
+                            <td>L.A. 7 a.k.a S Club 7 in L.A.</td>
+                            <td>13 episodes + 2 TV Specials</td>
+                            <td>Los Angeles</td>
+                            <td>6th April 2000</td>
+                        </tr>
+                        <tr>
+                            <td>Hollywood 7 a.k.a S Club 7 in Hollywood</td>
+                            <td>13 episodes</td>
+                            <td>Los Angeles</td>
+                            <td>27th September 2001</td>      
+                        </tr>
+                        <tr>
+                            <td>Viva S Club</td>
+                            <td>13 episodes</td>
+                            <td>Barcelona</td>
+                            <td>20th September 2002</td>      
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
     </section>
 
      <section class="block">
